# orchestrator

./: README.md  pyproject.toml
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatWindow.tsx
frontend/src/hooks/: useAutoScroll.ts
frontend/src/orchestrator/: AgentRouter.test.ts  AgentRouter.ts
frontend/src/services/: customgpt.ts
frontend/src/types/: chat.ts  env.d.ts
src/orchestrator/: __init__.py  config.py  main.py  router.py
src/orchestrator/agents/: __init__.py  builder.py  planner.py  researcher.py  reviewer.py
src/orchestrator/clients/: __init__.py  customgpt.py
tests/: __init__.py  conftest.py  test_agents.py  test_clients.py  test_config.py  test_config_cli.py  test_customgpt_client.py  test_routes.py
